# NextbikeOSM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bedzin-gzm.csv  bedzin-gzm.html  bedzin-gzm.kml  bialystok.csv  bialystok.html  bialystok.kml  bierun-gzm.csv  bierun-gzm.html  bierun-gzm.kml  bobrowniki-gzm.html  bojszowy-gzm.html  boleslawiec.html  bytom-gzm.csv  bytom-gzm.html  bytom-gzm.kml  chelm-slaski-gzm.csv  chelm-slaski-gzm.html  chelm-slaski-gzm.kml  chelm.csv  chelm.html  chelm.kml  chodziez.csv  chodziez.html  chodziez.kml  chorzow-gzm.csv  chorzow-gzm.html  chorzow-gzm.kml  chorzow.html  ciechanow.csv  ciechanow.html  ciechanow.kml  configuration.py  czeladz-gzm.csv  czeladz-gzm.html  czeladz-gzm.kml  (+393 more)
.forgejo/workflows/: deploy.yml
docs/: grodzisk-mazowiecki.html  index.html  kolobrzeg.html  koluszki.html  konin.html  koszalin.html  kutno.html  lask.html  lodz.html  lowicz.html  lublin.html  olesno.html  pabianice.html  piaseczno.html  piotrkow-trybunalski.html  pobiedziska.html  sieradz.html  skierniewice.html  sokolow-podlaski.html  swidnik.html  tarnow.html  warsaw.html  warszawa.html  wolsztyn.html  wroclaw.html  zdunska-wola.html  zgierz.html  zielona-gora.html
templates/: base.html  index.html  map.html  mevo.html  nextbike.html  osm_changes.html  osm_new.html  osm_rem.html  roovee.html
