[project]
name = "nextbikeosm"
version = "0.1.0"
description = "Compares bike networks data with OpenStreetMap"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-slugify>=8.0.4",
    "starsep-utils>=0.9.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "pytest",
]

[tool.ruff.lint]
extend-select = ["B", "U"]
